Loadbalancer: Add virtual threads options
It is now possible to enable virtual threads with the JVM flag
`-DVTHREADS=true`.

Other improvements:
- Configure number of server threads using `-DNTHREADS=xx`.
- Extract common config of docker services into `java-service.yml`.
- Configure `servers.list` resource for docker environment. File will no
  longer work for a local setup.
- Simplify logger setup to read config from resource file at class
  initialization.